test/tests/compiler/8_loops/valid/for_decl_no_init.plx
pub fn main(none) i32 {
    x: i32 = 4
    loop i: i32; while (i = x - 2) .. x = i + 1;
    return x
}

